# hot_or_not_off_chain_agent

./: .env.example  .gitignore  Cargo.toml  Dockerfile  ci.nix  command.md  default.nix
.github/workflows/: deploy_to_cloud_run_on_push_to_main.yaml
migrations/: 20230808162628_initialize_canister_metrics_tables.sql
script/local/: build.sh  ngrok.sh  start.sh  timescale.sh
sql-query/cleanup/: 230907 - delete-redundant.sql
src/: main.rs  metrics.rs
visualization/canister_metrics/: query.sql
