[package]
name = "receive_canister_metrics_from_fleet_and_push_to_timeseries_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
tokio = { version = "1.29.1", features = ["full"] }
