[package]
name = "receive_canister_metrics_from_fleet_and_push_to_timeseries_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
candid = "0.9.3"
chrono = "0.4.28"
rmp-serde = "1.1.2"
serde = "1.0.183"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.29.1", features = ["full"] }
